# LMPipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_trl_sft_basic.py
configs/: custom_tokenizer_config.yaml  llama_7b_config.yaml  pipeline_config.yaml  sft_only_config.yaml  sft_with_postprocessing_config.yaml  state_persistence_example.yaml  trl_sft_chat_config.yaml  trl_sft_config.yaml
docs/: README.md  code_consolidation_summary.md  dataset_format_detection.md  pipeline_guide.md  training_state_persistence.md  trl_sft_implementation.md
examples/: complete_workflow.py  custom_tokenizer_stage.py  dpo_example.py  example_usage.py  hub_upload_config.yaml  hub_upload_example.py  intelligent_defaults_demo.py  multi_format_training_example.py  pipeline_example.py  test_custom_algorithm.py  test_dataset_formats.py  trl_sft_demo.py  upload_existing_model.py
src/fnsft/: __init__.py  __main__.py  pipeline.py  pipeline_main.py  sft_trainer.py
src/fnsft/algorithms/: base.py  rlaif.py
src/fnsft/stages/: __init__.py  base.py  cot_distillation.py  dpo.py  rl.py  sft.py
src/fnsft/utils/: __init__.py  dataset_utils.py
src/lmpipeline/: __init__.py  __main__.py  pipeline.py  pipeline_main.py
src/lmpipeline/algorithms/: __init__.py  base.py  dpo.py  sft.py  trl_sft.py
src/lmpipeline/utils/: __init__.py  config_defaults.py  dataset_utils.py  model_utils.py  platform_setup.py  post_processing.py  training_state.py  wandb_integration.py
tests/: README.md  test_config_defaults.py  test_dpo_stage.py  test_pipeline.py  test_sft_trainer.py  test_state_persistence_integration.py  test_training_state.py  test_trl_sft_stage.py  test_wandb_integration.py
